[gd_scene load_steps=5 format=3 uid="uid://jpbsmpnd4rte"]

[ext_resource type="Script" path="res://scripts/start.gd" id="1_8x7a3"]
[ext_resource type="Script" path="res://scripts/start_button.gd" id="2_7ajxv"]
[ext_resource type="PackedScene" uid="uid://byqpfpyqe6jeo" path="res://garbage_objects/exit_button.tscn" id="3_xrg8e"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yvobb"]

[node name="start" type="Node2D"]
script = ExtResource("1_8x7a3")

[node name="start button" type="RichTextLabel" parent="."]
z_index = 2
offset_top = 224.0
offset_right = 1920.0
offset_bottom = 514.0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[url][center]Start[/center][/url]"
meta_underlined = false
hint_underlined = false
script = ExtResource("2_7ajxv")

[node name="exit_button" parent="." instance=ExtResource("3_xrg8e")]
visible = false

[node name="garbage_sleep_area" type="Area2D" parent="."]
position = Vector2(1188, 934)

[node name="CollisionShape2D" type="CollisionShape2D" parent="garbage_sleep_area"]
position = Vector2(-168, 298)
shape = SubResource("WorldBoundaryShape2D_yvobb")

[connection signal="meta_clicked" from="start button" to="start button" method="_on_meta_clicked"]
[connection signal="meta_hover_ended" from="start button" to="start button" method="_on_meta_hover_ended"]
[connection signal="meta_hover_started" from="start button" to="start button" method="_on_meta_hover_started"]
[connection signal="body_entered" from="garbage_sleep_area" to="." method="_on_garbage_sleep_area_body_entered"]
